# Mari_Admin

./: .gitignore  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml
.changeset/: loud-cooks-melt.md  public-ears-end.md  quiet-candies-turn.md  seven-melons-wash.md
scripts/: release-json.cjs  sync-versions.cjs
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/model/structs/: mod.rs
src-tauri/src/model/structs/information_provider/: device_information_struct.rs  mod.rs
src-tauri/src/module/: mod.rs
src-tauri/src/module/environment/: mod.rs
src-tauri/src/module/information_provider/: device_information.rs  mod.rs  network_information.rs  time_information.rs
src-tauri/src/module/window_controller/: exit_window.rs  focus_window.rs  hide_window.rs  maximize_window.rs  minimize_window.rs  mod.rs  open_window.rs  refresh_window.rs  set_default_size_window.rs
src/lib/asset/style/: app-layout.style.css  css.style.css  daisyui.style.css  font.style.css
src/lib/component/local/: LSettingTable.svelte  LThemeController.svelte
src/lib/model/data/: route.data.ts  shortcutKey.data.ts  tabcontent.data.ts  theme.data.ts
src/lib/model/enum/: application.enum.ts  font.enum.ts  tauri-function.enum.ts  theme.enum.ts
src/lib/model/interface/: route.interface.ts  tabcontent.interface.ts  (+2 more)
src/routes/: +error.svelte  +layout.svelte  +page.svelte
src/routes/app/: +page.svelte
src/routes/auth/: +page.svelte
src/routes/menu/: +page.svelte
(+26 files in other folders)
